--- a/index-style.css
+++ b/index-style.css
@@ -87,6 +87,28 @@ input {
     background-color: #006ead;
 }
 
+
+#download{
+    border: 0;
+    border-radius: 5px;
+    padding: 0.7rem;
+
+    background-color: rgb(255, 238, 0);
+    color: #000;
+
+    cursor: pointer;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.8rem;
+}
+
+
+#download:hover{
+    background-color: rgb(151, 141, 3);
+    color: #fff;
+}
+
+
+
 table{
     width: 100%;
 }
